--- a/assets/css/skins/default.css
+++ b/assets/css/skins/default.css
@@ -143,7 +143,8 @@ ul.filter-items li:hover,
 .pager li > span:active,
 .tagcloud a:hover,
 .tagcloud a:active,
-.tagcloud a:focus{
+.tagcloud a:focus,
+.pager li.current > span{
 	border-color:#df2626;
 }
 
