--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -876,6 +876,9 @@ article {
 .wp-block-latest-comments{
 	list-style: none;
 }
+.has-avatars .wp-block-latest-comments__comment .wp-block-latest-comments__comment-excerpt, .has-avatars .wp-block-latest-comments__comment .wp-block-latest-comments__comment-meta{
+	
+}
 div.aligncenter{
 	text-align: center;
 }
