--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -874,7 +874,7 @@ article {
 	color: #fff;
 }
 .wp-block-latest-comments{
-	list-style: none;
+	padding-left: 0;
 }
 .has-avatars .wp-block-latest-comments__comment .wp-block-latest-comments__comment-excerpt, .has-avatars .wp-block-latest-comments__comment .wp-block-latest-comments__comment-meta{
 	
