--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -876,7 +876,10 @@ article {
 .wp-block-latest-comments{
 	padding-left: 0;
 }
-.has-avatars .wp-block-latest-comments__comment .wp-block-latest-comments__comment-excerpt, .has-avatars .wp-block-latest-comments__comment .wp-block-latest-comments__comment-meta{
+.has-avatars .wp-block-latest-comments__comment .wp-block-latest-comments__comment-excerpt{
+	
+}
+.has-avatars .wp-block-latest-comments__comment .wp-block-latest-comments__comment-meta{
 	margin-left: 15px;
 	padding-left: 15px;
 }
