--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -877,7 +877,7 @@ article {
 	padding-left: 0;
 }
 .has-avatars .wp-block-latest-comments__comment .wp-block-latest-comments__comment-excerpt{
-	
+	margin-left: 15px;
 }
 .has-avatars .wp-block-latest-comments__comment .wp-block-latest-comments__comment-meta{
 	margin-left: 15px;
