--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -881,7 +881,7 @@ article {
 }
 .has-avatars .wp-block-latest-comments__comment .wp-block-latest-comments__comment-meta{
 	margin-left: 15px;
-	padding-left: 15px;
+	padding: 50px 20px;
 }
 div.aligncenter{
 	text-align: center;
