--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -877,7 +877,9 @@ article {
 	padding-left: 0;
 }
 .wp-block-latest-comments .wp-block-latest-comments__comment article{
-	padding-left: 0;
+	margin-bottom: 0;
+	padding-bottom: 0;
+	border: none;
 }
 .wp-block-latest-comments .wp-block-latest-comments__comment .wp-block-latest-comments__comment-meta{
 	padding: 50px 20px;
