--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1138,7 +1138,9 @@ ul.ads li {
 .comment-form div {
 	margin-bottom: 20px;
 }
-
+.page .comment-wrapper{
+	padding-top: 60px;
+}
 /* Inner page
 =========================== */
 
