--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2114,8 +2114,8 @@ aside .widget {
 }
 @media all and (max-width: 1270px){
 	.sticky .post-meta{
-		top: 0;
-		left: 0px;
+		top: calc(50% - 49.5px);
+		left: 15px;
 		width: 80px;
 		height: 99px;
 		z-index: 44;
