--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2063,7 +2063,7 @@ aside .widget {
 	margin: auto;
 }
 .wp-caption.alignleft{
-	margin-left: 10px;
+	margin: 0 20px 20px 0;
 }
 .wp-caption img {
 	max-width: 100%;
