--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2065,6 +2065,9 @@ aside .widget {
 .wp-caption.alignleft{
 	margin: 0 20px 20px 0;
 }
+.wp-caption.alignright{
+margin: 0 0 20px 20px;
+}
 .wp-caption img {
 	max-width: 100%;
 }
