--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1139,7 +1139,7 @@ ul.ads li {
 	margin-bottom: 20px;
 }
 .comment-list{
-	margin-top: 25px;
+	padding-top: 25px;
 }
 .page .comment-wrapper{
 	padding-top: 60px;
