--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name: Sonno Landing Page WordPress Theme
+Theme Name: Sonno
 Theme URI: http://themesquared.com/sonno/
 Author: ThemeSquared
 Author URI: http://themeforest.net/user/theme-squared/portfolio
